Fix `global-customer-satisfaction-input` overflow bug
Issue: springernature/frontend-toolkits/issues/889

- Add `position: relative` rule to `.c-customer-satisfaction-input`

--- a/toolkits/global/packages/global-customer-satisfaction-input/scss/50-components/_customer-satisfaction-input.scss
+++ b/toolkits/global/packages/global-customer-satisfaction-input/scss/50-components/_customer-satisfaction-input.scss
@@ -1,4 +1,5 @@
 .c-customer-satisfaction-input {
+	position: relative;
 	padding: $global-customer-satisfaction-input-container-padding;
 	background-color: $global-customer-satisfaction-input-container-background-color;
 	overflow: hidden;
